# t3ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: t3ai.hpp
src/: CMakeLists.txt  main.cpp
src/t3ai/: t3ai.cpp
