cmake_minimum_required(VERSION 3.20)

set(CMAKE_BUILD_TYPE Release)
project(t3ai
	VERSION 1.0.0
	DESCRIPTION "hack or skill, kill is kill"
	LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(PROJECT_LIB_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/lib")
set(PROJECT_DEP_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/dep")

add_subdirectory(src)
